--- a/client/views/header.twig
+++ b/client/views/header.twig
@@ -1,8 +1,9 @@
 <nav>
 	<div class="nav-wrapper">
-		<a href="#!" class="brand-logo">Feeling Analysis</a>
+		<a href="#!" class="brand-logo">Analyse des sentiments</a>
 		<ul class="right hide-on-med-and-down">
-			<li><a href="/item">Item 1</a></li>
+			<li><a href="/">Accueil</a></li>
+			<li><a href="/graph">Sentiments par match</a></li>
 		</ul>
 	</div>
 </nav>
