--- a/client/views/footer.twig
+++ b/client/views/footer.twig
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col l6 s12">
 				<h5 class="white-text">Contenu</h5>
-				<p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+				<p class="grey-text text-lighten-4">Ce site permet la visualition des sentiments des supporters du SMC sur les réseaux sociaux Facebook et Twitter. On peut aussi voir l'évolution selon les différents match du club.</p>
 			</div>
 			<div class="col l4 offset-l2 s12">
 				<h5 class="white-text">Liens</h5>
