--- a/client/views/index.twig
+++ b/client/views/index.twig
@@ -1,5 +1,5 @@
 {% extends 'base.twig' %}
-{% block title %}Index{% endblock %}
+{% block title %}Accueil{% endblock %}
 {% block body %}
 <div id="chartdiv"></div>
 <div class="row">
